0.6.2 - Major update to the calendar. No longer an offscreen slide in, but a fullscreen modal that will pop up when clicked on. It will then show events of soldiers in a list and cover the full box. Some issues need to be address: Days going over/under when is currently showing; And, making sure that the events match up with the users events. Currently, if someone has three, they will continue to have three events across the entire calendar. Will need to fix that.

--- a/static/styles/admin.css
+++ b/static/styles/admin.css
@@ -44,9 +44,13 @@ body {
 
 .cal_dot {
 	height: 10px;
-	width: 10px;
-	border-radius: 50%;
+	width: 100%;
 	display: inline-block;
+}
+
+tr td {
+	padding: 0 !important;
+	margin: 0 !important;
 }
 
 /* Sidebar */
